--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
   <h1 class="eng" id="eng-header">Hotpot</h1>
   <h1 class="chi" id="chi-header" style="display: none;">火锅</h1>
 
-  <!-- Soup base section (directly under header) -->
+  <!-- Soup base section -->
   <div class="section soup-base">
     <div class="section-text">
       <h3 class="eng" id="eng-soup">Bone Broth</h3>
@@ -64,6 +64,21 @@
       <p class="chi" id="chi-shrimp-p" style="display: none;">虾为火锅带来清甜的滋味。</p>
     </div>
     <img src="shrimpimg.jpeg" alt="Shrimp">
+  </div>
+
+  <!-- Vegetable section -->
+  <div class="section reverse">
+    <div class="section-text">
+      <h3 class="eng" id="eng-vegetable">Vegetables</h3>
+      <h3 class="chi" id="chi-vegetable" style="display: none;">蔬菜</h3>
+      <p class="eng" id="eng-vegetable-p">
+        Fresh vegetables bring balance and color to hotpot. Leafy greens, root veggies, and seasonal produce soak up the broth while adding crisp textures and natural sweetness.
+      </p>
+      <p class="chi" id="chi-vegetable-p" style="display: none;">
+        新鲜的蔬菜为火锅增添了平衡和色彩。绿叶菜、根茎类和时令蔬菜吸收汤底的味道，同时带来爽脆的口感和自然的清甜。
+      </p>
+    </div>
+    <img src="vegetableimg.jpeg" alt="Vegetables">
   </div>
 
   <script src="chibutton.js"></script>
