--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thanksgiving Dinner</title>
+  <title>Thanksgiving Dinner Hotpot</title>
   <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
@@ -16,69 +16,127 @@
 
   <!-- Hotpot header -->
   <h1 class="eng" id="eng-header">Hotpot</h1>
-  <h1 class="chi" id="chi-header" style="display: none;">火锅</h1>
+  <h1 class="chi" id="chi-header" style="display:none;">火锅</h1>
 
-  <!-- Soup base section -->
+  <!-- Soup base -->
   <div class="section soup-base">
     <div class="section-text">
-      <h3 class="eng" id="eng-soup">Bone Broth</h3>
-      <h3 class="chi" id="chi-soup" style="display: none;">骨头汤</h3>
-      <p class="eng" id="eng-soup-p">
-        Bone broth is the soul of hotpot. Rich in nutrients and flavor, it provides a comforting base that enhances every ingredient cooked within it.
-      </p>
-      <p class="chi" id="chi-soup-p" style="display: none;">
-        骨头汤是火锅的灵魂。它营养丰富、味道醇厚，为所有食材提供温暖的底味。
-      </p>
+      <h3 class="eng">Bone Broth</h3>
+      <h3 class="chi" style="display:none;">骨头汤</h3>
+      <p class="eng">Bone broth is the soul of hotpot, rich in nutrients and flavor.</p>
+      <p class="chi" style="display:none;">骨头汤是火锅的灵魂，营养丰富、味道醇厚。</p>
     </div>
-    <img src="bonebrothimg.jpeg" alt="Bone Broth Soup Base">
+    <img src="bonebrothimg.jpeg" alt="Bone Broth">
   </div>
 
-  <!-- Lamb section -->
+  <!-- Lamb -->
   <div class="section">
     <div class="section-text">
-      <h3 class="eng" id="eng-lamb">Lamb</h3>
-      <h3 class="chi" id="chi-lamb" style="display: none;">羊肉</h3>
-      <p class="eng" id="eng-lamb-p">Lamb meat is one of the most beloved ingredients in hotpot...</p>
-      <p class="chi" id="chi-lamb-p" style="display: none;">羊肉是火锅中最受欢迎的食材之一。</p>
+      <h3 class="eng">Lamb</h3>
+      <h3 class="chi" style="display:none;">羊肉</h3>
+      <p class="eng">Lamb meat is beloved for its rich flavor and tender texture.</p>
+      <p class="chi" style="display:none;">羊肉因其浓郁的风味和鲜嫩的口感而备受喜爱。</p>
     </div>
-    <img src="lambimg.jpeg" alt="Lamb Meat">
+    <img src="lambimg.jpeg" alt="Lamb">
   </div>
 
-  <!-- Mushroom section -->
+  <!-- Mushroom -->
   <div class="section reverse">
     <div class="section-text">
-      <h3 class="eng" id="eng-mushroom">Mushroom</h3>
-      <h3 class="chi" id="chi-mushroom" style="display: none;">蘑菇</h3>
-      <p class="eng" id="eng-mushroom-p">Mushrooms add an earthy depth to hotpot...</p>
-      <p class="chi" id="chi-mushroom-p" style="display: none;">蘑菇为火锅增添了浓郁的香气。</p>
+      <h3 class="eng">Mushroom</h3>
+      <h3 class="chi" style="display:none;">蘑菇</h3>
+      <p class="eng">Mushrooms add earthy depth and umami richness to hotpot.</p>
+      <p class="chi" style="display:none;">蘑菇为火锅增添了浓郁的香气和鲜味。</p>
     </div>
-    <img src="mushroomimg.jpeg" alt="Mushrooms">
+    <img src="mushroomimg.jpeg" alt="Mushroom">
   </div>
 
-  <!-- Shrimp section -->
+  <!-- Shrimp -->
   <div class="section">
     <div class="section-text">
-      <h3 class="eng" id="eng-shrimp">Shrimp</h3>
-      <h3 class="chi" id="chi-shrimp" style="display: none;">虾</h3>
-      <p class="eng" id="eng-shrimp-p">Shrimp brings a sweet, delicate flavor to hotpot...</p>
-      <p class="chi" id="chi-shrimp-p" style="display: none;">虾为火锅带来清甜的滋味。</p>
+      <h3 class="eng">Shrimp</h3>
+      <h3 class="chi" style="display:none;">虾</h3>
+      <p class="eng">Shrimp brings a sweet, delicate flavor and cooks quickly.</p>
+      <p class="chi" style="display:none;">虾带来清甜的滋味，烹煮迅速。</p>
     </div>
     <img src="shrimpimg.jpeg" alt="Shrimp">
   </div>
 
-  <!-- Vegetable section -->
+  <!-- Vegetables -->
   <div class="section reverse">
     <div class="section-text">
-      <h3 class="eng" id="eng-vegetable">Vegetables</h3>
-      <h3 class="chi" id="chi-vegetable" style="display: none;">蔬菜</h3>
-      <p class="eng" id="eng-vegetable-p">
-        Fresh vegetables bring balance and color to hotpot. Leafy greens, root veggies, and seasonal produce soak up the broth while adding crisp textures and natural sweetness.
-      </p>
-      <p class="chi" id="chi-vegetable-p" style="display: none;">
-        新鲜的蔬菜为火锅增添了平衡和色彩。绿叶菜、根茎类和时令蔬菜吸收汤底的味道，同时带来爽脆的口感和自然的清甜。
-      </p>
+      <h3 class="eng">Vegetables</h3>
+      <h3 class="chi" style="display:none;">蔬菜</h3>
+      <p class="eng">Fresh vegetables add balance, crisp textures, and natural sweetness.</p>
+      <p class="chi" style="display:none;">新鲜蔬菜为火锅增添平衡、爽脆和自然清甜。</p>
     </div>
     <img src="vegetableimg.jpeg" alt="Vegetables">
+  </div>
+
+  <!-- Geoduck -->
+  <div class="section">
+    <div class="section-text">
+      <h3 class="eng">Geoduck</h3>
+      <h3 class="chi" style="display:none;">象拔蚌</h3>
+      <p class="eng">Geoduck adds unique sweetness and chewy texture to hotpot.</p>
+      <p class="chi" style="display:none;">象拔蚌为火锅增添独特的清甜和嚼劲。</p>
+    </div>
+    <img src="geoduckimg.jpeg" alt="Geoduck">
+  </div>
+
+  <!-- Octopus -->
+  <div class="section reverse">
+    <div class="section-text">
+      <h3 class="eng">Octopus</h3>
+      <h3 class="chi" style="display:none;">章鱼</h3>
+      <p class="eng">Octopus offers a tender bite and absorbs broth flavor beautifully.</p>
+      <p class="chi" style="display:none;">章鱼鲜嫩，能很好地吸收汤底的味道。</p>
+    </div>
+    <img src="octopusimg.jpeg" alt="Octopus">
+  </div>
+
+  <!-- Mussel -->
+  <div class="section">
+    <div class="section-text">
+      <h3 class="eng">Mussel</h3>
+      <h3 class="chi" style="display:none;">贻贝</h3>
+      <p class="eng">Mussels bring briny richness that deepens hotpot’s flavor.</p>
+      <p class="chi" style="display:none;">贻贝带来鲜美的咸香，使火锅更醇厚。</p>
+    </div>
+    <img src="musselimg.jpeg" alt="Mussel">
+  </div>
+
+  <!-- Beef Tripe -->
+  <div class="section reverse">
+    <div class="section-text">
+      <h3 class="eng">Beef Tripe</h3>
+      <h3 class="chi" style="display:none;">牛肚</h3>
+      <p class="eng">Beef tripe adds chewy texture and is a hotpot classic.</p>
+      <p class="chi" style="display:none;">牛肚口感有嚼劲，是火锅的经典食材。</p>
+    </div>
+    <img src="beeftripeimg.jpeg" alt="Beef Tripe">
+  </div>
+
+  <!-- Beef Tongue -->
+  <div class="section">
+    <div class="section-text">
+      <h3 class="eng">Beef Tongue</h3>
+      <h3 class="chi" style="display:none;">牛舌</h3>
+      <p class="eng">Beef tongue is tender and flavorful, perfect for quick cooking.</p>
+      <p class="chi" style="display:none;">牛舌鲜嫩多汁，适合快速涮煮。</p>
+    </div>
+    <img src="beeftongueimg.jpeg" alt="Beef Tongue">
+  </div>
+
+  <!-- Dried Bean Skin -->
+  <div class="section reverse">
+    <div class="section-text">
+      <h3 class="eng">Dried Bean Skin</h3>
+      <h3 class="chi" style="display:none;">腐竹</h3>
+      <p class="eng">Dried bean skin absorbs broth flavors and adds a satisfying bite.</p>
+      <p class="chi" style="display:none;">腐竹能吸收汤底的味道，口感丰富。</p>
+    </div>
+    <img src="beanskinimg.jpeg" alt="Dried Bean Skin">
   </div>
 
   <script src="chibutton.js"></script>
